<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/sdk_amount"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:hint="@string/amount"
        android:inputType="number" />

    <EditText
        android:id="@+id/sdk_email"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/sdk_phone"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:hint="@string/phone_number"
        android:inputType="phone"/>


    <EditText
        android:id="@+id/sdk_description"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:hint="@string/description"
        android:text="@string/desc"
        android:inputType="text"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pay_kpg"
        android:text="@string/pay_kpg"
        android:layout_weight="1"/>

</LinearLayout>